@@ -15,6 +15,7 @@ Version 1.3.2
 - added ability to search comments (Olivier Sannier)
 - poEdit now preserves obsolete translations (Olivier Sannier)
 - added checking of input files' correctness
+- fixed parsing of "\\n" substrings in catalog headers
 - added more translations:
      Korean (Hojin Choi)
      Hebrew (Nir Lavi)
